# minnesota

./: .gitignore  Taskfile.yml  pyproject.toml
minnesota/: __init__.py  __main__.py
minnesota/api/: __init__.py  app.py
minnesota/aws/: __init__.py  clients.py  cognito.py  dynamodb.py  lambdas.py  s3.py  secrets.py  ses.py
minnesota/clients/: __init__.py  stripe_client.py
minnesota/gcp/: __init__.py
minnesota/logs/: __init__.py  logger.py
minnesota/utils/: __init__.py  args.py  loader.py  shell.py
